force-app/main/default/objects/HAM_Listing__c/HAM_Listing__c.object-meta.xml
<CustomObject>
    <description>This object is used for portal content visiblity.</description>
    <label>Listing</label>
    <nameField>
        <displayFormat>List-{00000}</displayFormat>
        <label>Listing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>