force-app/main/default/objects/HAM_Listing__c/fields/HAM_Actual_link__c.field-meta.xml
<CustomField>
    <fullName>HAM_Actual_link__c</fullName>
    <description>This is the placeholder for storing the external links for news, registration link for events etc.</description>
    <inlineHelpText>This is the placeholder for storing the external links for news, registration link for events etc.</inlineHelpText>
    <label>HAM Actual link</label>
    <type>Url</type>
</CustomField>