force-app/main/default/objects/HAM_Listing__c/fields/HAM_Category__c.field-meta.xml
<CustomField>
    <fullName>HAM_Category__c</fullName>
    <description>This field will define the place where this listing will be displayed</description>
    <inlineHelpText>This field will define the place where this listing will be displayed</inlineHelpText>
    <label>HAM Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Homepage image</fullName>
            </value>
            <value>
                <fullName>Make a Gift page</fullName>
            </value>
            <value>
                <fullName>Membership page</fullName>
            </value>
            <value>
                <fullName>News</fullName>
            </value>
            <value>
                <fullName>Resources</fullName>
            </value>
            <value>
                <fullName>Volunteer management</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>