force-app/main/default/objects/HAM_Listing__c/fields/HAM_Display_Order__c.field-meta.xml
<CustomField>
    <fullName>HAM_Display_Order__c</fullName>
    <description>This is the place that will define the order in which the data is displayed</description>
    <inlineHelpText>This is the place that will define the order in which the data is displayed</inlineHelpText>
    <label>HAM Display Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>