force-app/main/default/objects/HAM_Listing__c/fields/HAM_End_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_End_Date__c</fullName>
    <label>HAM End Date</label>
    <type>Date</type>
</CustomField>