force-app/main/default/objects/HAM_Listing__c/fields/HAM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>HAM_ExternalId__c</fullName>
    <description>Stores the external system identifier used to synchronize this record with external platforms (e.g., News or other integrated systems).</description>
    <externalId>true</externalId>
    <inlineHelpText>Stores the external system identifier used to synchronize this record with external platforms (e.g., News or other integrated systems).</inlineHelpText>
    <label>HAM ExternalId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>