force-app/main/default/objects/HAM_Listing__c/fields/HAM_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>HAM_Image_URL__c</fullName>
    <description>This will store the images shown in the portal</description>
    <inlineHelpText>This will store the images shown in the portal</inlineHelpText>
    <label>HAM Image URL</label>
    <type>Url</type>
</CustomField>