force-app/main/default/objects/HAM_Listing__c/fields/HAM_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to TRUE then we show on portal else we hide.</description>
    <inlineHelpText>If set to TRUE then we show on portal else we hide.</inlineHelpText>
    <label>HAM Is Active</label>
    <type>Checkbox</type>
</CustomField>