force-app/main/default/objects/HAM_Listing__c/fields/HAM_Is_Trending__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Trending__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag is used to show the top 3 items on homepage.</description>
    <inlineHelpText>This flag is used to show the top 3 items on homepage.</inlineHelpText>
    <label>HAM Is Trending</label>
    <type>Checkbox</type>
</CustomField>