force-app/main/default/objects/HAM_Listing__c/fields/HAM_Is_Video_Content__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Video_Content__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This flag will define if the content is video</description>
    <inlineHelpText>This flag will define if the content is video</inlineHelpText>
    <label>HAM Is Video Content</label>
    <type>Checkbox</type>
</CustomField>