force-app/main/default/objects/HAM_Listing__c/fields/HAM_Is_Virtual_Event__c.field-meta.xml
<CustomField>
    <fullName>HAM_Is_Virtual_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox defines if the event is virtual or in person</description>
    <inlineHelpText>This checkbox defines if the event is virtual or in person</inlineHelpText>
    <label>HAM Is Virtual Event</label>
    <type>Checkbox</type>
</CustomField>