force-app/main/default/objects/HAM_Listing__c/fields/HAM_Location__c.field-meta.xml
<CustomField>
    <fullName>HAM_Location__c</fullName>
    <label>HAM_Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>