force-app/main/default/objects/HAM_Listing__c/fields/HAM_News_Category__c.field-meta.xml
<CustomField>
    <fullName>HAM_News_Category__c</fullName>
    <label>HAM News Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Athletics</fullName>
            </value>
            <value>
                <fullName>College News</fullName>
            </value>
            <value>
                <fullName>Student Experience</fullName>
            </value>
            <value>
                <fullName>Student Research</fullName>
            </value>
            <value>
                <fullName>Student Internship</fullName>
            </value>
            <value>
                <fullName>Outcomes</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Students</fullName>
            </value>
            <value>
                <fullName>Hamilton in the News</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>