force-app/main/default/objects/HAM_Listing__c/fields/HAM_Short_Description__c.field-meta.xml
<CustomField>
    <fullName>HAM_Short_Description__c</fullName>
    <description>This will be the short description we shown on the tiles in the portal.</description>
    <inlineHelpText>This will be the short description we shown on the tiles in the portal.</inlineHelpText>
    <label>HAM Short Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>