force-app/main/default/objects/HAM_Listing__c/fields/HAM_Tag__c.field-meta.xml
<CustomField>
    <fullName>HAM_Tag__c</fullName>
    <label>HAM Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>