force-app/main/default/objects/HAM_Listing__c/fields/HAM_Title__c.field-meta.xml
<CustomField>
    <fullName>HAM_Title__c</fullName>
    <description>Basic name for the News Headline, Events Name , images etc.</description>
    <inlineHelpText>Basic name for the News Headline, Events Name , images etc.</inlineHelpText>
    <label>HAM Title</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>