force-app/main/default/objects/HAM_Listing__c/fields/HAM_Topics__c.field-meta.xml
<CustomField>
    <fullName>HAM_Topics__c</fullName>
    <label>HAM Topics</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>College News</fullName>
            </value>
            <value>
                <fullName>Student Experience</fullName>
            </value>
            <value>
                <fullName>Student Research</fullName>
            </value>
            <value>
                <fullName>Student Internships</fullName>
            </value>
            <value>
                <fullName>Outcomes</fullName>
            </value>
            <value>
                <fullName>Alumni</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Students</fullName>
            </value>
            <value>
                <fullName>Hamilton In the News</fullName>
            </value>
            <value>
                <fullName>Athletics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>