force-app/main/default/objects/HAM_Listing__c/fields/HAM_Volunteer_Activity_Link__c.field-meta.xml
<CustomField>
    <fullName>HAM_Volunteer_Activity_Link__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is a lookup to Interest Values so that the displayed activity maps to the right value on backend.</description>
    <inlineHelpText>This is a lookup to Interest Values so that the displayed activity maps to the right value on backend.</inlineHelpText>
    <label>HAM Volunteer Activity Link</label>
    <referenceTo>ucinn_ascendv2__Involvement_Value__c</referenceTo>
    <relationshipLabel>Listing</relationshipLabel>
    <relationshipName>Listing</relationshipName>
    <type>Lookup</type>
</CustomField>