force-app/main/default/objects/HAM_Listing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>HAM_Title__c</columns>
    <columns>HAM_Short_Description__c</columns>
    <columns>HAM_Tag__c</columns>
    <columns>HAM_Actual_link__c</columns>
    <columns>HAM_Category__c</columns>
    <columns>HAM_Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAM_Category__c</field>
        <operation>equals</operation>
        <value>News</value>
    </filters>
    <label>All</label>
</ListView>