force-app/main/default/objects/HAM_Listing__c/listViews/All_Home_Page_images_Videos.listView-meta.xml
<ListView>
    <fullName>All_Home_Page_images_Videos</fullName>
    <columns>NAME</columns>
    <columns>HAM_Title__c</columns>
    <columns>HAM_Actual_link__c</columns>
    <columns>HAM_Image_URL__c</columns>
    <columns>HAM_Is_Active__c</columns>
    <columns>HAM_Short_Description__c</columns>
    <columns>HAM_Is_Virtual_Event__c</columns>
    <columns>HAM_Display_Order__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>HAM_Category__c</field>
        <operation>equals</operation>
        <value>Homepage image</value>
    </filters>
    <label>All Home Page images/Videos</label>
</ListView>